# LearingScheduler

./: CMakeLists.txt  README.md  学习调度器-项目文档.odt
demo/: README.md  align.py  lr_scheduler.h  学习调度器-设计文档.docx
examples/: main.cc
infinitrain/: README.md  lr_scheduler.py  train.py
pytorch/: align.py
